errors.txt
    Checking lang v0.1.0 (/Users/septemlee/private/lang)
warning: unused import: `crate::ast`
  --> src/build.rs:10:5
   |
10 | use crate::ast;
   |     ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0609]: no field `mangled_types_info` on type `&mut TypeInferrer`
    --> src/sema/infer.rs:1989:78
     |
1989 | ...lf.mangled_types_info.ge...
     |       ^^^^^^^^^^^^^^^^^^ unknown field
     |
     = note: available fields are: `symbol_table`, `structs`, `enums`, `errors`, `functions` ... and 10 others

error[E0308]: mismatched types
    --> src/sema/infer.rs:2070:53
     |
2070 | ...ns.push(mangled_fn);
     |       ---- ^^^^^^^^^^ expected `TypedFnDef`, found `()`
     |       |
     |       arguments to this method are incorrect
     |
note: method defined here
    --> /Users/septemlee/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/src/rust/library/alloc/src/vec/mod.rs:995:12
     |
 995 |     pub fn push(&mut se...
     |            ^^^^

warning: unused variable: `imports`
   --> src/sema/infer.rs:388:9
    |
388 |         imports: Vec<(Op...
    |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_imports`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `generic_args`
   --> src/sema/types.rs:801:17
    |
801 | ...   generic_args, // C...
    |       ^^^^^^^^^^^^ help: try ignoring the field: `generic_args: _`

warning: unused variable: `span`
   --> src/sema/types.rs:986:17
    |
986 |                 span,
    |                 ^^^^ help: try ignoring the field: `span: _`

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
warning: `lang` (bin "lang") generated 4 warnings
error: could not compile `lang` (bin "lang") due to 2 previous errors; 4 warnings emitted
